
1.01 (09/12/2005)
    * (ms) Added 'utf8' and 'binmode' flags to Log::Log4perl::Appender::File
           per suggestion by Jonathan Warden.
    * (ms) Made test cases 003Layout.t and 033UsrCspec.t resilient against
           broken ActiveState 5.8.4 and 5.8.7.
    * (ms) Skipped failing test cases for 5.005, looks like the caller() level
           in carp() is wrong, but not worth fixing.

1.00 (08/13/2005)
    * (ms) Added tag qw(:no_extra_logdie_message) to suppress duplicate
           die() messages in scripts using simple configurations and LOGDIE().
           Added logexit() as an alternative way.
    * (ms) Fixed bug with logcarp/croak/cluck, which were using the 
           wrong Carp level.
    * (kg) Fixing bug in Appender::Limit regarding $_ scope
    * (ms) corrected typo in Synchronized.pm found by Rob Redmon.
    * (ms) Fixed bug with Appender::File reported by Michael Smith. Checking
           now if print() succeeds, catching errors with full disks and
           ulimit'ed environments.
    * (ms) Added LOGCARP(), LOGCLUCK(), LOGCONFESS(), LOGCROAK() macros
           in :easy mode (suggested by Jud Dagnall).
    * (ms) $INITIALIZED now gets reset during logger cleanup.

0.52 (05/08/2005)
    * (ms) Jonathan Manning <jmanning@alisa-jon.net> provided a patch
           for DateFormat.pm to fix 3-letter month abbreviations and a
           shortcut to simulate Apache's log format.
    * (kg) Ola Finsbraaten provided a patch to provide a better error
           message when a logger is defined twice in a config.

0.51 (01/08/2005)
    * (ms) Jon Bjornstad noticed that the file appender wasn't including
           $! in the die() exception thrown if open_file() fails. Added it.
    * (ms) Added umask option to file appender
    * (ms) Fix to L4p::Util::module::available() for Win32
           compliance by Roger Yager <roger.yager@eyestreet.com>
    * (ms) Added check to L4p::Util::module_available() returning true